tests/paczka1/fuzzy1/53984515.err
Error in line 2: llv A177 81,9
Error in line 15: afIVJHrm A177 30,2
Error in line 7: 2ovcSsWG7S S784 44,2
Error in line 18: afIVJHrm A137 35,3
Error in line 25: nh0rgWIA A591 77,2
